--- a/vc8_0/GeoIP.vcproj
+++ b/vc8_0/GeoIP.vcproj
@@ -56,6 +56,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				OutputFile=""
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -191,6 +192,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				OutputFile=""
 			/>
 			<Tool
 				Name="VCALinkTool"
