Added support for "Finish" button translation in Quick Start Wizard
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6091 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -4750,6 +4750,7 @@ BEGIN
     IDS_GENERAL_CUSTOM      "Custom"
     IDS_GENERAL_BACK        "&Back"
     IDS_GENERAL_NEXT        "&Next"
+    IDS_GENERAL_FINISH      "Finish"
 END
 
 STRINGTABLE 
